# OCR-NovaTech

./: 1.nettoyage.ipynb  2.exploration.ipynb  3.modelisations.ipynb  Corrections-19-06.md  Presentation.pptx  data.parquet  model.parquet  pyproject.toml
